<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<version>2.0.0-SNAPSHOT</version>
	<groupId>com.greendelta</groupId>
	<artifactId>collaboration-server</artifactId>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<packaging>war</packaging>
	<name>collaboration-server</name>
	<description>Collaboration Server 2.0</description>
	<properties>
		<jakarta-activation.version>2.0.1</jakarta-activation.version>
		<jakarta-xml-bind.version>3.0.1</jakarta-xml-bind.version>
		<java.version>17</java.version>
		<customDir>custom</customDir>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.openlca</groupId>
			<artifactId>olca-git</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.openlca</groupId>
			<artifactId>olca-jsonld-2-ilcd</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.greendelta.search</groupId>
			<artifactId>search-wrapper-os-rest</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>com.warrenstrange</groupId>
			<artifactId>googleauth</artifactId>
			<version>1.5.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit.http.server</artifactId>
			<version>6.0.0.202111291000-r</version>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>appserver-stage</id>
			<activation>
				<property>
					<name>env</name>
					<value>stage</value>
				</property>
			</activation>
			<properties>
				<appserver>stage</appserver>
				<contextPath>/lca-collaboration</contextPath>
			</properties>
		</profile>
		<profile>
			<id>appserver-prod</id>
			<activation>
				<property>
					<name>env</name>
					<value>prod</value>
				</property>
			</activation>
			<properties>
				<appserver>prod</appserver>
				<contextPath>/lca-collaboration</contextPath>
			</properties>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<id>npm_install</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>npm</executable>
							<arguments>
								<argument>install</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>exec_gulp</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>node_modules/gulp/bin/gulp.js</executable>
							<arguments>
								<argument>build</argument>
								<argument>--contextPath=${contextPath}</argument>
								<argument>--appserver=${appserver}</argument>
								<argument>--customDir=${customDir}</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>